--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,18 +22,18 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
             app:srcCompat="@drawable/ic_logo" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txt_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
             app:errorEnabled="true"
             app:errorTextColor="@color/red"
             app:startIconDrawable="@drawable/ic_email_foreground"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="10dp"
             android:hint="@string/login_email">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-
+                android:textColor="@color/white"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,8 +60,8 @@
                 android:id="@+id/txt_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/textfield_round"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/white"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -118,11 +118,11 @@
             android:textAlignment="center"
             android:textColor="@color/secondary"/>
 
-        <ImageView
-            android:id="@+id/img_google"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/ic_google_foreground"
+        <ImageButton
+            android:id="@+id/btn_google"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/ic_google_foreground"
             android:layout_marginHorizontal="150dp"
             android:layout_marginVertical="16dp" />
     </LinearLayout>
