--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorOnPrimary">@color/primary_light</item>
         <item name="colorAccent">@color/secondary</item>
+        <item name="colorSecondary">@color/secondary</item>
         <item name="android:windowBackground">@drawable/background_app</item>
         <item name="android:textColor">@color/white</item>
         <item name="windowActionBar">false</item>
