--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primary"
     android:layout_margin="16dp">
 
@@ -18,19 +19,11 @@
             android:scaleType="centerCrop"
             tools:src="@tools:sample/backgrounds/scenic" />
 
-        <TextView
-            android:id="@+id/txt_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/start_price"
-            android:textSize="24sp"
-            android:layout_marginLeft="16dp"
-            android:textStyle="bold"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp">
 
             <TextView
                 android:id="@+id/start_brand"
@@ -50,6 +43,16 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="16dp"/>
 
+            <TextView
+                android:id="@+id/txt_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/start_price"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="170dp"
+                android:layout_marginRight="16dp"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -63,7 +66,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/ic_location_foreground"
+                app:srcCompat="@drawable/ic_location_foreground"
                 android:layout_marginLeft="16dp"/>
 
             <TextView
