--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -56,7 +56,7 @@
             android:hint="@string/login_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txt_email"
+                android:id="@+id/txt_email_singup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -76,7 +76,7 @@
             android:layout_marginVertical="4dp"
             android:hint="@string/login_pass">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txt_pass"
+                android:id="@+id/txt_pass_singup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
