--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -132,10 +132,10 @@
                 android:layout_marginLeft="48dp"/>
 
             <TextView
-                android:id="@+id/singin"
+                android:id="@+id/txt_singin_singup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/login_singup"
+                android:text="@string/singup_singin"
                 android:textAlignment="viewStart"
                 android:layout_marginLeft="16dp"
                 android:textColor="@color/secondary"/>
