--- a/app/src/main/res/drawable/button_delete_round.xml
+++ b/app/src/main/res/drawable/button_delete_round.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius = "50dp"/>
-    <stroke android:width="5px" android:color="@color/primary_light"/>
-    <solid android:color="@color/primary_light"/>
+    <stroke android:width="5px"
+        android:color="@color/red"/>
+    <solid android:color="@color/red"/>
 
 </shape>
