--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MyProfileFragment">
+    tools:context=".myprofile.MyProfileFragment">
+
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -17,7 +19,7 @@
         android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imgbtn_user"
+        android:id="@+id/img_user_myprofile"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
@@ -84,29 +86,40 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="30dp" />
 
-    <Button
-        android:id="@+id/btn_update_my_profile"
+    <LinearLayout
+        android:id="@+id/linearLayoutButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_round"
-        android:text="@string/my_profile_update"
-        android:textSize="20sp"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginVertical="8dp"/>
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@+id/space"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_delete_my_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_delete_round"
-        android:text="@string/my_profile_delete"
-        android:textSize="20sp"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginVertical="8dp"/>
+        <Button
+            android:id="@+id/btn_update_my_profile"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_round"
+            android:text="@string/my_profile_update"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="8dp"/>
 
+        <Button
+            android:id="@+id/btn_delete_my_profile"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_delete_round"
+            android:text="@string/my_profile_delete"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="8dp"/>
     </LinearLayout>
-
+    </LinearLayout>
 </FrameLayout>
+
