--- a/app/src/main/res/layout/fragment_my_posts.xml
+++ b/app/src/main/res/layout/fragment_my_posts.xml
@@ -205,6 +205,16 @@
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginVertical="8dp"/>
 
+            <Button
+                android:id="@+id/btn_mypost_delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_delete_round"
+                android:text="@string/my_post_delete_topost"
+                android:textSize="20sp"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginVertical="8dp"/>
+
         </LinearLayout>
 
     </ScrollView>
