--- a/app/src/main/res/layout/fragment_my_posts.xml
+++ b/app/src/main/res/layout/fragment_my_posts.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="100dp"
-                android:background="@drawable/ic_add_photo_foreground" />
+                app:srcCompat="@drawable/ic_add_photo_foreground" />
 
             <TextView
                 android:id="@+id/txt_mypost_data"
