--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primary"
-    android:layout_margin="16dp">
+    android:layout_margin="16dp"
+    android:theme="@style/Theme.MaterialComponents.Light">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,19 +27,11 @@
             android:layout_marginTop="4dp">
 
             <TextView
-                android:id="@+id/start_brand"
+                android:id="@+id/txt_start_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/start_brand"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="16dp"/>
-
-            <TextView
-                android:id="@+id/start_model"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/start_model"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="16dp"/>
@@ -50,6 +43,7 @@
                 android:text="@string/start_price"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_marginLeft="170dp"
                 android:layout_marginRight="16dp"/>
 
@@ -70,10 +64,11 @@
                 android:layout_marginLeft="16dp"/>
 
             <TextView
-                android:id="@+id/txt_location"
+                android:id="@+id/txt_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/start_location"
+                android:textColor="@color/black"
                 android:layout_marginLeft="16dp"
                 />
 
@@ -81,6 +76,7 @@
                 android:id="@+id/txt_province"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="@string/start_province"
                 android:layout_marginLeft="16dp"
                 />
@@ -100,15 +96,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/start_year"
                 android:layout_marginLeft="16dp"
-                />
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/txt_fuel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/start_fuel"
-                android:layout_marginLeft="16dp"
-                />
+                android:textColor="@color/black"
+                android:layout_marginLeft="16dp" />
 
             <TextView
                 android:id="@+id/txt_change"
@@ -116,12 +112,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/start_change"
                 android:layout_marginLeft="16dp"
-                />
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
-
 
 </com.google.android.material.card.MaterialCardView>
