--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_start"
-        android:name="com.example.bsauto.StartFragment"
+        android:name="com.example.bsauto.listpost.StartFragment"
         android:label="@string/menu_start"
         tools:layout="@layout/fragment_start" >
         <action
