--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -63,52 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="4dp">
-
-            <ImageView
-                android:id="@+id/start_icon_location"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/ic_location_foreground"
-                android:layout_marginLeft="16dp"/>
-
-            <TextView
-                android:id="@+id/txt_city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/start_location"
-                android:textColor="@color/black"
-                android:layout_marginLeft="16dp"
-                />
-
-            <TextView
-                android:id="@+id/txt_guion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/start_guion"
-                android:textSize="24sp"
-                android:textColor="@color/black"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"/>
-
-            <TextView
-                android:id="@+id/txt_province"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="@string/start_province"
-                android:layout_marginLeft="16dp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginVertical="4dp"
-            >
+            android:layout_marginVertical="4dp">
 
             <TextView
                 android:id="@+id/txt_year"
