--- a/app/src/main/res/layout/fragment_my_posts.xml
+++ b/app/src/main/res/layout/fragment_my_posts.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".myposts.MyPostsFragment">
+    tools:context=".myposts.MyPostsFragment"
+    android:background="@drawable/background_app">
 
     <ScrollView
         android:layout_width="match_parent"
