--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".myprofile.MyProfileFragment">
+    tools:context=".myprofile.MyProfileFragment"
+    android:background="@drawable/background_app">
 
 
 
